--- a/public/assets/scss/_custom.scss
+++ b/public/assets/scss/_custom.scss
@@ -8,7 +8,7 @@
 	font-weight: 500;
 }
 .CodeMirror-focused .CodeMirror-cursors {
-	visibility: visible !important;
+	//visibility: visible !important;
 }
 .CodeMirror-cursor {
 	border-left: 2px solid $blue;
@@ -63,14 +63,7 @@
 	height: 16px;
 	border-left: 2px solid $pink;
 	position: absolute;
-	z-index: 2;
 	transform: translate(4px, 4px);
-	//animation: custom-blink 1.06s steps(1) infinite;
-}
-@keyframes custom-blink {
-	0% { visibility: visible; }
-	50% { visibility: hidden; }
-	100% { visibility: visible; }
 }
 
 
