--- a/public/assets/scss/_main.scss
+++ b/public/assets/scss/_main.scss
@@ -3,7 +3,6 @@ main {
 	height: 100%;
 	position: relative;
 	float: left;
-	z-index: 6;
 	iframe {
 		width: 100%;
 		height: 100%;
